--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
     align-items: center;
     min-height: 900px;
     background: url('010.jpg') no-repeat center center fixed;
-    background-size: 100% auto;
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
 }
 
@@ -66,3 +67,19 @@ form {
     font-weight: normal;
     border-radius: 0px;
 }
+
+/* Mobile view */
+@media only screen and (max-width: 768px) {
+    body {
+       background-position: center;
+    }
+   }
+   
+   /* Desktop view */
+   @media only screen and (min-width: 769px) {
+    body {
+       background-attachment: fixed;
+    }
+   }
+
+
